--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,20 @@
 <div class="grid" [ngStyle]="{
     'grid-template-areas': gridTemplateAreas,
-    'grid-template-columns': gridTemplateColumns,
-    'grid-template-rows': 'repeat(20, 100px)'
+    'grid-template-columns': gridTemplateColumns
   }">
-  <div class="rosterTime" [ngStyle]="{'grid-area': 'addCalendar'}">
+  <div class="sidebarTile" [ngStyle]="{'grid-area': 'addCalendar'}">
     <button (click)="clickMe()">
       Click me!
     </button>
   </div>
-  <div *ngFor="let day of days" class="day" [ngStyle]="{'grid-column': day}">
+  <div *ngFor="let day of days" class="headerTile" [ngStyle]="{'grid-column': day}">
     {{day}}
   </div>
-  <div *ngFor="let rosterTime of rosterTimes" class="rosterTime" [ngStyle]="{'grid-area': convertRosterTimeToCssReadableString(rosterTime)}">
+  <div *ngFor="let rosterTime of rosterTimes" class="sidebarTile" [ngStyle]="{'grid-area': convertRosterTimeToCssReadableString(rosterTime)}">
     {{rosterTime}}
   </div>
   <ng-container *ngFor="let day of days">
-    <div *ngFor="let rosterTime of rosterTimes" class="event" [ngStyle]="{
+    <div *ngFor="let rosterTime of rosterTimes" class="eventTile" [ngStyle]="{
           'grid-column': day,
           'grid-row': convertRosterTimeToCssReadableRow(rosterTime)
         }">
